tests/NormalTests/paczka1/fuzzy1/90858620.err
Error in line 4: T8PR6F A396 88,3
Error in line 8: sMCuv9ysyc7 S997 50,4
Error in line 11: sMCuv9ysyc7 A396 24,53
Error in line 5: T8PR6F A974 74,6
Error in line 23: dRrunJjY4 A974 39,6
Error in line 9: sMCuv9ysyc7 S93 8,1
